Finished all message handler logic